# ai_social_media_post_generator

./: .gitignore  app.py  pyproject.toml  test.ipynb
constants/: content_requirements.py  domains.py
crew/agents/: image_designer.py  researcher.py  writer.py
crew/tasks/: image_designing.py  research.py  writing.py
legacy/: test.ipynb
tools/image_generation/: image_gen.py
utils/: linkedin_preview.py
